# ErpMalvezi

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  INSTALACAO_WINDOWS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_modulo_empresa.py  0003_modulo_auth.py  0004_modulo_permissoes.py  0005_modulo_categorias.py  0006_modulo_contatos.py  0007_modulo_contas_bancarias.py  0008_modulo_fatura.py  0009_modulo_lancamentos.py  0010_modulo_transferencias.py  0011_modulo_conciliacao.py  0012_modulo_patrimonio.py  0013_lancamento_anexos.py  0014_patrimonio_anexos.py  0015_contato_documento_nullable.py  0016_lancamento_tags.py  0017_usuario_gestor.py  0018_auditoria.py  0019_imovel_matriculas.py  0020_lancamento_indexes_perf.py  0021_empresa_documento_nullable.py  0022_saldo_bancario_index.py  (+12 more)
backend/app/: main.py
backend/scripts/: criar_admin.py  seed_demo.py
backend/tests/: conftest.py  test_auth_service.py  test_categoria_schemas.py  test_categoria_service.py  test_conciliacao_parser.py  test_conciliacao_service.py  test_conta_bancaria_schemas.py  test_conta_bancaria_service.py  test_contato_schemas.py  test_contato_service.py  test_dashboard_service.py  test_empresa_schemas.py  test_fatura_schemas.py  test_fatura_service.py  test_fluxo_caixa_service.py  test_health.py  test_lancamento_importacao.py  test_lancamento_service.py  test_permissao_service.py  test_transferencia_service.py  test_usuario_schemas.py  test_validators.py
(+166 files in other folders)
